--- a/(root)/index.html
+++ b/(root)/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" media="screen and (min-width: 832px)" href="desktop_styles.css">
+<link rel="stylesheet" media="screen and (max-width: 831px)" href="mobile_styles.css">
+
+
+<script media="screen and (min-width: 832px)" defer src="desktop.js"></script>
+<script media="screen and (max-width: 831px)" defer src="mobile.js"></script>
+
+<script async src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsfilter@1/cmsfilter.js"></script>
+
+
+</head>
+<body>
+
+<h1>TEND.TO</h1>
+<p>This website is currently under construction. Please come back later!</p>
+
+
+</body>
+</html>
