--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 <body>
 
+  <div class="construction">
 <h1>TEND.TO</h1>
+  <br>
 <p>This website is currently under construction. Please come back later!</p>
-
+</div>
 
 </body>
 </html>
