--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 <body>
 
-  <div class="construction">
+  <div class"title">
 <h1>TEND.TO</h1>
+  </div>
   <br>
+    <div class="construction">
 <p>This website is currently under construction. Please come back later!</p>
 </div>
 
