--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 <body>
-  <div class="circularcursor"></div>
+  <div class="header">
    <div class="title">
     TEND.TO
   </div>
@@ -79,7 +79,7 @@
   <div id="bar2"></div>
   </a>
 </div>
-
+  </div>
 
 
 
