--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" media="screen and (min-width: 1220px)" href="desktop_styles.css">
+<link rel="stylesheet" media="screen and (min-width: 1220px)" href="index_desktop_styles.css">
 <link rel="stylesheet" media="screen and (max-width: 1219px)" href="mobile_styles.css">
 
 
@@ -62,7 +62,6 @@
   <title>tend.to</title>
 </head>
 
-
 <body>
   <div class="header">
    <div class="title">
@@ -73,10 +72,12 @@
 <span id="header-text-gardens">
 </span>
 </div>
+<div class="mobile-menu-landing">
  <a href="menu_overlay.html"> 
   <div id="bar1"></div>
   <div id="bar2"></div>
   </a>
+</div>
   </div>
 
 
@@ -164,4 +165,3 @@
 </div>
 </body>
 </html>
-
