--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <script media="screen and (min-width: 1220px)" defer src="desktop.js"></script>
 <script media="screen and (max-width: 1219px)" defer src="mobile.js"></script>
 
-<script async src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsfilter@1/cmsfilter.js"></script>
-
 
 <style>
 
@@ -33,7 +31,7 @@
   }
   
   @media screen and (min-width: 1220px) {
-  .flex{
+  .grid{
   display: none;
 }
 
