--- a/exploring-our-local-blooms.html
+++ b/exploring-our-local-blooms.html
@@ -6,46 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" media="screen and (min-width: 1280px)" href="desktop_styles.css">
-    <link rel="stylesheet" media="screen and (max-width: 1279px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
+    <link rel="stylesheet" media="screen and (max-width: 1000px)" href="mobile_styles.css">  
     <title>tend.to  |  Exploring Our Local Blooms</title>
+
+<style>
+*{
+  overflow-x: hidden;
+}
+</style>
+
+
 </head>
 
 <body style="background-color:#e2e2e2">
 
-<body>
- 
   <div class="wrapper">
-    <div class="mobile-menu-pages">
-        <a href="about.html"> 
-         <div id="bar1"></div>
-         <div id="bar2"></div>
-         </a>
-       </div>
+ 
 <h1> EXPLORING OUR <br> LOCAL BLOOMS</h1>
 
 <sub>EXPERIENCE LOG</sub>
 
-<div class="line-1"></div>
-<div class="interview-1"><a href="zine-workshop.html">Zines as a Form of Activism and Rebellion</div>
-    <div class="line-1"></div>
-<div class="interview-2"><a href="4.2. interview 2.html">Pari Undercurrent Exhibition</a></div>
-<div class="interview-2"><a href="4.2. interview 2.html">The Independent Press: Semi Permanent and the Other Worlds Zine Fair</a></div>
-<div class="interview-2"><a href="4.2. interview 2.html">The Gallery Space: Penrith Regional Gallery</a></div>
+<div class="line-2"></div>
+<a href="zine-workshop.html"><img id="zines" src="img/workshop participants.jpg"></img>
 
-
-<a href="index.html"><div class="nav-landing"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
-
-
-
-
-
+  <div class="experience"><p>Zines as a Form of Activism and Rebellion</p></a></div>
+    <div class="line-3"></div>
+<div class="buds">
+<h1>BUDS IN THE<br>PROCESS OF GROWTH</h1>
+<sub>COMING SOON</sub>
+<br><br>
+<p>These seeds of thought have been nurtured but are not ready to bloom in this garden yet. 
+  Please stay tuned for these writings — they will grow at a later time.
+</p>
+</div>
+<div class="experience-2"><p>&rarr; Pari Undercurrent Exhibition</p></div>
+<br><br>
+<div class="experience-2"><p>&rarr; The Independent Press: Semi Permanent and the Other Worlds Zine Fair</p></div>
+<br><br>
+<div class="experience-2"><p>&rarr; The Gallery Space: Penrith Regional Gallery</p></div>
 
 
     </div>
+  </div>
 
 
 
-
+    <a href="index.html"><div class="nav-landing" style="background-color:#e2e2e2"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
 
 
 
