--- a/tian-zhang.html
+++ b/tian-zhang.html
@@ -43,7 +43,7 @@
 
 
   <div class="page-header-section" style="background-color: #E4F9F1">
-  <a href="4. interviews.html">&larr; CONVERSATIONS FROM THE GARDEN</a></div>
+  <a href="conversations-from-the-garden.html">&larr; CONVERSATIONS FROM THE GARDEN</a></div>
   <div class="page-header-title"><sub>TIAN ZHANG | 26 OCTOBER 2023</sub></div>
   <div class="header-line"></div>
 </div>
