--- a/exploring-our-local-blooms.html
+++ b/exploring-our-local-blooms.html
@@ -5,8 +5,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" media="screen and (min-width: 1280px)" href="desktop_styles.css">
-    <link rel="stylesheet" media="screen and (max-width: 1000px)" href="mobile_styles.css">  
+    <link rel="stylesheet" media="screen and (min-width: 1250px)" href="desktop_styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 1249px)" href="mobile_styles.css">  
     <title>tend.to  |  Exploring Our Local Blooms</title>
 
 <style>
@@ -22,9 +22,10 @@
 
   <div class="wrapper">
  
-<h1> EXPLORING OUR <br> LOCAL BLOOMS</h1>
+    <div class="main-title"><h1>EXPLORING OUR LOCAL BLOOMS</h1>
 
-<sub>EXPERIENCE LOG</sub>
+      <sub>EXPERIENCE LOG AND THOUGHTS IN PROCESS</sub>
+      </div>
 
 <div class="line-2"></div>
 <a href="zine-workshop.html"><img id="zines" src="img/workshop participants.jpg"></img>
