--- a/tash-keuneman.html
+++ b/tash-keuneman.html
@@ -5,8 +5,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" media="screen and (min-width: 900px)" href="desktop_styles.css">
-  <link rel="stylesheet" media="screen and (max-width: 899px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
+  <link rel="stylesheet" media="screen and (min-width: 1024px)" href="desktop_styles.css">
+  <link rel="stylesheet" media="screen and (max-width: 1023px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
 
   <style>
 @media screen and (min-width: 1200px) {
@@ -45,8 +45,7 @@
 
 <body>
   <div class="page-header" style="background-color: #BDE9BF">
-
-
+    
   <div class="page-header-section" style="background-color: #BDE9BF">
   <a href="conversations-from-the-garden.html">&larr; CONVERSATIONS FROM THE GARDEN</a></div>
   <div class="page-header-title"><sub>TASH KEUNEMAN | 08 AUGUST 2023</sub></div>
@@ -55,6 +54,7 @@
 
   <div class="wrapper">
  
+    <div class="tags"><sub>INTERVIEW  / ART AND DESIGN / CLIMATE JUSTICE / DIGITAL & TECHNOLOGY</sub></div>
 
 
     <div class="interview-title-1">
@@ -63,12 +63,12 @@
 </div>
 
 <div class="author">
-  <sub>Julien Ortiz in conversation with Tash Keuneman</sub>
+  Julien Ortiz in conversation with Tash Keuneman
 </div>
 
   <div class="bio-1"><i>Tash Keuneman</i> is a designer of software passionate about improving human and planetary welfare.
     She's the head of design at Sonder; a company that helps organisations improve the wellbeing of their people with a comprehensive care platform, and a 
-    co-founder of the climate action non-profit, the Keuneman Foundation. Currently based on Dharug and Gundungurra land in the Blue Mountains, she also creates zines and essays about creativity. </div>
+    co-founder of the climate action non-profit, the Keuneman Foundation. Currently based on Dharug and Gundungurra land in the Blue Mountains, she also creates zines and essays about creativity.</div>
 
 <div class=interview-text-1>
  <b>You describe your practice as being in the liminal space between product, writing and climate action — and I feel like that multidisciplinary existence is very resonant with a lot of creative practitioners. How do you say being involved in these different material spaces informs the ways you want to make change in the world?
@@ -253,8 +253,14 @@
   <a href="https://tashkeuneman.com/"><u>https://tashkeuneman.com</u></a>.</sub>
 </div>
 
-  <div class="ecosystems">
-<h1>RELATED ECOSYSTEMS</h1>
+<div id="ecosystems">
+  <h1>RELATED ECOSYSTEMS</h1>
+  <div id="blob-container-blue"></div>
+  <div class="section-1">
+    <sub>
+     <a href="zine-workshop.html">&rarr; Zines as a form of Activism and Rebellion</a> 
+    </sub>
+  </div>
   </div>
 
 </div>
