--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     Books and publications to grow your knowledge.
   </div>
 
-<div class="about-mobile"><a href="about.html"><p>ABOUT THE GARDEN</p></a></div>
+  <a href="about.html"><div class="about-mobile"><p>ABOUT THE GARDEN</p></div></a>
 </div>
 </div> <!--end of wrapper-->
 
