--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" media="screen and (min-width: 1280px)" href="desktop_styles.css">
-<link rel="stylesheet" media="screen and (max-width: 1279px)" href="mobile_styles.css">
+<link rel="stylesheet" media="screen and (min-width: 1024px)" href="desktop_styles.css">
+<link rel="stylesheet" media="screen and (max-width: 1023px)" href="mobile_styles.css">
 
 
 <script media="screen and (min-width: 1280px)" defer src="desktop.js"></script>
@@ -44,6 +44,10 @@
   display: none;
 }
 }
+
+body{
+  overflow-x: hidden;
+}
   </style>
   
   <title>tend.to</title>
@@ -55,23 +59,36 @@
   <div class="title">
     TEND.TO
   </div>
-    <div class="header-text-gardens">  
-<!--generative header animations -->
-<span id="header-text-gardens">
-</span>
-</div>
-<div class="mobile-menu">
- <a href="7. about.html"> 
-  <div id="bar1"></div>
-  <div id="bar2"></div>
-  </a>
+  <div class="header-text-gardens">  
+    <!--generative header animations -->
+    <span id="header-text-gardens">
+    </span>
+    </div>
 </div>
 
-<div class="description-about"><p><i>TEND.TO is a digital website project designed and coded by Julien Ortiz as part of the 2023 Design Honours course at the University of Technology, Sydney. This project aims to use the online practice of digital gardening in order to offer a growing space to learn about community creative practice in Western Sydney and the Blue Mountains. </i></p></div>
+
+<div class="description-about">
+  <b>TEND.TO is a digital website project designed and coded by Julien Ortiz as part of the 2023 Design Honours course at the University of Technology, Sydney. This project aims to use the online practice of digital gardening in order to offer a growing space to learn about community creative practice in Western Sydney and the Blue Mountains.</b>
+  <br><br>
+  I acknowledge the Dharug and Gadigal people of the Eora nation, whose lands I live and work on. I pay my respects to Elders past and present, recognising them as the traditional custodians of land, sea and sky, and that their sovereignty was never ceded. This was and always will be, Aboriginal land.
 
 </div>
+  <div class="digital-garden">
+    What is a digital garden?
 
-<p>I acknowledge the Dharug and Gadigal people of the Eora nation, whose lands I live and work on. I pay my respects to Elders past and present, recognising them as the traditional custodians of land, sea and sky, and that their sovereignty was never ceded. This was and always will be, Aboriginal land.</p>
+  <p><i>“A garden is a collection of evolving ideas that aren't strictly organised by their publication date. They're inherently exploratory – notes are linked through contextual associations. They aren't refined or complete — notes are published as half-finished thoughts that will grow and evolve over time. They're less rigid, less performative, and less perfect than the personal websites we're used to seeing.”</p></i>
+ <sub>— Maggie Appleton (2020)</sub> 
+</div>
+<div class="interview-text-1">
+  <p>TEND.TO draws from this framework by compiling informational resources that amplify and support the creative practices and initiatives of diverse, intersectional and BIPOC creatives within Western Sydney and the Blue Mountains Area. This space draws from my ongoing research and insights that have been initiated over the course of the 2023 year. It is a growing space, thoughts are added as I learn and develop as a budding creative and member of my local Western Sydney community. Hopefully, some of these resources and information are relavant to you too. 
+  <br>  <br>
+
+  The scope of this project is a small piece in the push towards equity and diversity within creative and digital spaces. This project exists currently as a speculative design idea, focusing on the needs of Western Sydney and Blue Mountains creative communities. As such, to foster futher movements of creative resilience and solidarity, we must look to the needs of our own communities and ensure spaces are made for the marginalised voices within it, so that we can create futures that support us all.
+  <br>  <br>
+
+ Thank you to everyone who has helped me in the building of this garden — Monica Monin, who was my guiding supervisor in this project; Zoe Sadokierski and Ella Cutler, who supported my ideation in the first semester of this year; my peers in the 2023 UTS Viscom/Photo Honours class; and my friends. I especially thank Tash Keuneman and Tian Zhang for contributing their insights to this project, which are undoubtedly treasured. Lastly, I thank my fellow artists in the Western Sydney community who are continuing to make their voices heard — without them, this work would not have grown. 
+</p>
+</div>
 <a href="index.html"><div class="nav-landing"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
 
 </body>
