--- a/planting-seeds-across-the-west.html
+++ b/planting-seeds-across-the-west.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" media="screen and (max-width: 940px)" href="mobile_styles.css">
 <link rel="stylesheet" media="screen and (min-width: 941px)" href="desktop_styles.css">
  <title>TEND.TO - Planting Seeds in the West</title>
+  @import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap');
 <style>
 
   html{
