--- a/planting-seeds-across-the-west.html
+++ b/planting-seeds-across-the-west.html
@@ -897,7 +897,7 @@ The WSAA represents over 40 arts and cultural organisations and local councils i
 </div>
 
 
-<a href="index.html"><div class="nav-landing" style="background-color: #D1EFFF;"><h1>&uarr;    RE-TEND.TO YOUR GARDEN     &uarr;</h1></div></a>
+<a href="index.html"><div class="nav-landing" style="background-color: #D1EFFF;"><h1>RE-TEND.TO YOUR GARDEN</h1></div></a>
 
 </body>
 </html>
