--- a/water-your-knowledge.html
+++ b/water-your-knowledge.html
@@ -13,7 +13,7 @@
 <body style="background-color:#e7e7e7">
 
  
-  <div class="wrapper">
+<div class="wrapper">
 
 <div class="initiatives">
 <h1>water your knowledge</h1>
@@ -28,145 +28,216 @@
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/a community is a garden.png"></img>
-</div>
-  <div class ="book-title">
-  <sub>A Community is a Garden</sub>
-</div>
-
+</div> 
+    <div class="book-title">
+      <p>A Community is a Garden</p>
+      <sub>Kanyinsola Anifowoshe and Mikki Janower</sub>
+      <div class="learnmore"><a href="https://mikki.studio/community.html">&rarr; ABOUT</a>
+        <br>
+        <a href="bit.ly/CommunityGardenToolkit">&rarr; READ/DOWNLOAD PDF</a>
+      </div>
+      <div class="genre-box">
 <div class="genre">Art and Design</div>
 <div class="genre">Collective Practice</div>
+  </div>
 </div>
+</div>
+
+
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/RadicalCare_Assets-05.jpg"></img>
 </div>
-  <div class ="book-title">
-  <sub>A manifesto for radical care or how to be a human in the arts</sub>
+<div class="book-title">
+  <p>A manifesto for radical care or how to be a human in the arts</p>
+  <sub>Tian Zhang</sub>
+  <div class="learnmore"><a href="https://pariari.org/shop/a-manifesto-for-radical-care-tian-zhang">&rarr; ABOUT</a>
+    <br>
+    <a href="https://sydneyreviewofbooks.com/essay/a-manifesto-for-radical-care-or-how-to-be-a-human-in-the-arts/">&rarr; READ</a>
+  </div>
+  <div class="genre-box">
+    <div class="genre">Art and Design</div>
+    <div class="genre">Collective Practice</div>
+    <div class="genre">Care Work</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Care Work</div>
-</div>
+
+
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail-square" src="img/a tender talk.png"></img>
 </div>
-  <div class ="book-title">
-  <sub>A Tender Talk, Tender Structures for Collaborative Work</sub>
+<div class="book-title">
+<p>A Tender Talk, Tender Structures For Collaborative Work</p>
+<sub>Jenna Porter, Iris Lee & Shan Wallace</sub>
+<div class="learnmore"><a href="https://www.presspress.info/gatherings/a-tender-talk">&rarr; ABOUT</a>
+  <br>
+  <a href="https://www.presspress.info/content/3-document/2-manifesto-for-tender-collaborative-work/a-tender-talk.pdf">&rarr; READ/DOWNLOAD PDF</a>
 </div>
-
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Care Work</div>
+<div class="genre-box">
+  <div class="genre">Art and Design</div>
+  <div class="genre">Collective Practice</div>
+  <div class="genre">Care Work</div>
+</div>
+</div>
 </div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/design justice.jpg"></img>
 </div>
-  <div class ="book-title">
-  <sub>Design Justice</sub>
+<div class="book-title">
+  <p>Design Justice</p>
+  <sub>Sasha Constanza-Chock</sub>
+  <div class="learnmore"><a href="https://mitpress.mit.edu/9780262043458/design-justice/">&rarr; ABOUT</a>
+    <br>
+  </div>
+  <div class="genre-box">
+    <div class="genre">Art and Design</div>
+    <div class="genre">Collective Practice</div>
+    <div class="genre">Climate Justice</div>
+    <div class="genre">Disability Justice</div>
+    <div class="genre">Race and Multiculturalism</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-<div class="genre">Disability Justice</div>
-
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/living and loving in diversity.jpeg"></img>
 </div>
   <div class ="book-title">
-  <sub>Living and Loving in Diversity: 
+  <p>Living and Loving in Diversity: 
     An anthology of Australian multicultural queer adventures
-  </sub>
-</div>
-
+  </p>
+  <sub>Maria Palotta-Chiarolli</sub>
+  <div class="learnmore"><a href="https://www.wakefieldpress.com.au/product.php?productid=1473">&rarr; ABOUT</a>
+    <br>
+  </div>
+  <div class="genre-box">
 <div class="genre">Community</div>
 <div class="genre">LGBTQIA+</div>
 </div>
+</div>
+</div>
+
+
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/teaching to transgress.jpg"></img>
 </div>
   <div class ="book-title">
-  <sub>Teaching to Transgress: Education as the Practice of Freedom</sub>
+  <p>Teaching to Transgress: Education as the Practice of Freedom</p>
+  <sub>bell hooks</sub>
+
+<div class="learnmore"><a href="https://www.wakefieldpress.com.au/product.php?productid=1473">&rarr; ABOUT</a></div>
+<div class="genre-box">
+  <div class="genre">Community</div>
+  <div class="genre">Teaching/Pedagogy</div>
+  <div class="genre">Race and Multiculturalism</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
+  
+
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/glitch feminism.jpg"></img>
 </div>
   <div class ="book-title">
-  <sub>Glitch Feminism: A Manifesto</sub>
+  <p>Glitch Feminism: A Manifesto</p>
+  <sub>Legacy Russell</sub>
+<div class="learnmore"><a href="https://www.wakefieldpress.com.au/product.php?productid=1473">&rarr; ABOUT</a></div>
+<div class="genre-box">
+  <div class="genre">Feminism</div>
+  <div class="genre">Digital and Technology</div>
+  <div class="genre">Race and Multiculturalism</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/softwareforartists.jpeg"></img>
 </div>
-  <div class ="book-title">
-  <sub>Software for Artists Book #001: Building Better Realities</sub>
+  <div class="book-title">
+  <p>Software for Artists Book #001: Building Better Realities</p>
+<sub>Salome Asega, Stephanie Dinkins, Grayson Earle, Ann Haeyoung, Rindon Johnson, Ryan Kuo & Tsige Tafesse</sub>
+<div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  <br>
+<a href="https://cdn.filestackcontent.com/SqWJijeRGVaA7jEigfzQ">&rarr; READ / DOWNLOAD PDF</a></div>
+<div class="genre-box">
+  <div class="genre">Art and Design</div>
+  <div class="genre">Collective Practice</div>
+  <div class="genre">Digital and Technology</div>
+  <div class="genre">Futuring</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Digital and Technology</div>
-<div class="genre">Futuring</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/Emergent-Strategy-1.jpg"></img>
 </div>
   <div class ="book-title">
-  <sub>Emergent Strategy: Shaping Change, Changing Worlds</sub>
+  <p>Emergent Strategy: Shaping Change, Changing Worlds</p>
+  <sub>adrienne maree brown</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+    <br>
 </div>
+<div class="genre-box">
 <div class="genre">Race and Multiculturalism</div>
 <div class="genre">Collective Practice</div>
 <div class="genre">Futuring</div>
 <div class="genre">Climate Justice</div>
 </div>
+</div>
+</div>
+
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/care work.jpeg"></img>
 </div>
   <div class ="book-title">
-  <sub>Care Work: Dreaming Disability Justice</sub>
+  <p>Care Work: Dreaming Disability Justice</p>
+  <sub>Leah Lakshmi Piepzna Samarasinha</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+</div>
+<div class="genre-box">
+  <div class="genre">Disability Justice</div>
+<div class="genre">Community</div>
+<div class="genre">Care Work</div>
+</div>
+</div>
 </div>
 
-<div class="genre">Disability Justice</div>
-<div class="genre">Community</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/speculative everything.jpg"></img>
 </div>
   <div class ="book-title">
-  <sub>Speculative Everything</sub>
+  <p>Speculative Everything</p>
+  <sub>Anthony Dunne & Fiona Raby</sub>
+<div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
 </div>
-
-<div class="genre">Art and Design</div>
-<div class="genre">Futuring</div>
+<div class="genre-box">
+  <div class="genre">Art and Design</div>
+  <div class="genre">Futuring</div>
+  <div class="genre">Digital and Technology</div>
+</div>
+</div>
 </div>
 
 
@@ -176,36 +247,49 @@
   <img id="book-thumbnail" src="img/stories out west.png"></img>
 </div>
   <div class ="book-title">
-  <sub>Stories Out West</sub>
+  <p>Stories Out West</p>
+  <sub>ACON x Sweatshop Writers Literacy Movement</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+</div>
+<div class="genre-box">
+<div class="genre">Race and Multiculturalism</div>
+<div class="genre">LGBTQIA+</div>
+<div class="genre">Community</div>
+</div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/racism.png"></img>
 </div>
-  <div class ="book-title">
-  <sub>Racism: Stories on Fear, Hate and Bigotry</sub>
+  <div class="book-title">
+  <p>Racism: Stories on Fear, Hate and Bigotry</p>
+  <sub>Winnie Dunn, Stephen Pham and Phoebe Grainer</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  </div>
+<div class="genre-box">
+  <div class="genre">Race and Multiculturalism</div>
+  <div class="genre">Community</div>
+  </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
 <div class="book">
-
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/second-shelf.jpg"></img>
 </div>
 <div class ="book-title">
-  <sub>Shelf Documents: Art Library As Practice</sub>
+  <p>Shelf Documents: Art Library As Practice</p>
+  <sub>Heide Hinrichs, Jo-ey Tang & Elizabeth Haines</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
 </div>
+<div class="genre-box">
 <div class="genre">Art and Design</div>
 <div class="genre">Collective Practice</div>
+</div>
+</div>
 </div>
 
 <div class="book">
@@ -213,12 +297,15 @@
   <img id="book-thumbnail" src="img/Indigenous peoples rise up.png"></img>
 </div>
   <div class ="book-title">
-  <sub>Indigenous Peoples Rise Up!</sub>
-</div>
-
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
+  <p>Indigenous Peoples Rise Up!</p>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  </div>
+<div class="genre-box">
+<div class="genre">Race and Multiculturalism</div>
+<div class="genre">Digital and Technology</div>
 <div class="genre">Climate Justice</div>
+</div>
+</div>
 </div>
 
 <div class="book">
@@ -226,55 +313,60 @@
   <img id="book-thumbnail" src="img/the art of activism.jpg"></img>
 </div>
   <div class ="book-title">
-  <sub>The Art of Activism</sub>
+  <p>The Art of Activism</p>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  </div>
+  <div class="genre-box">
+    <div class="genre">Art and Design</div>
+    <div class="genre">Digital and Technology</div>
+    <div class="genre">Climate Justice</div>
+    </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/Teaching Community.png"></img>
 </div>
   <div class ="book-title">
-  <sub>Teaching Community</sub>
+  <p>Teaching Community</p>
+  <sub>bell hooks</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  </div>
+  <div class="genre-box">
+    <div class="genre">Race and Multiculturalism</div>
+    <div class="genre">Teaching/Pedagogy</div>
+    <div class="genre">Community</div>
+    </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
-</div>
 
 <div class="book">
   <div class="thumbnail-box">
   <img id="book-thumbnail" src="img/Future_Histories.jpeg"></img>
 </div>
-  <div class ="book-title">
-  <sub>Future Histories</sub>
+  <div class="book-title">
+  <p>Future Histories</p>
+  <sub>Lizzie O'Shea</sub>
+  <div class="learnmore"><a href="https://store.pioneerworks.org/products/software-for-artists-book">&rarr; ABOUT / BUY</a>
+  </div>
+  <div class="genre-box">
+    <div class="genre">Digital and Technology</div>
+    <div class="genre">Collective Practice</div>
+    <div class="genre">Futuring</div>
+    </div>
+</div>
 </div>
 
-<div class="genre">Art and Design</div>
-<div class="genre">Collective Practice</div>
-<div class="genre">Climate Justice</div>
 </div>
-
-
-
-
-</div>
-
-</div>
-
-<div id="overlay-1" onclick="on()">
-
 </div>
 
 
 
 
-</div>
+
 <a href="index.html"><div class="nav-landing" style="background-color:#e7e7e7"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
     </body>
     </html>
