--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ body{
  <sub>— Maggie Appleton (2020)</sub> 
 </div>
 <div class="desc-text">
-  <p>TEND.TO draws from this framework by compiling informational resources that amplify and support the creative practices and initiatives of diverse, intersectional and BIPOC creatives within Western Sydney and the Blue Mountains Area. This space draws from my ongoing research and insights that have been initiated over the course of the 2023 year. It is a growing space, thoughts are added as I learn and develop as a budding creative and member of my local Western Sydney community. Hopefully, some of these resources and information are relevant to you too. 
+  <p>TEND.TO draws from this framework by compiling informational resources that amplify and support the creative practices and initiatives of diverse, intersectional and BIPOC creatives within Western Sydney and the Blue Mountains Area. This space draws from my ongoing research and insights that have been initiated over the course of the 2023 year. It is a growing space, thoughts are added as I learn and develop as a budding creative and member of my local Western Sydney community. Hopefully, some of these resources and information are relavant to you too. 
   <br>  <br>
 
   The scope of this project is a small piece in the push towards equity and diversity within creative and digital spaces. This project exists currently as a speculative design idea, focusing on the needs of Western Sydney and Blue Mountains creative communities. As such, to foster futher movements of creative resilience and solidarity, we must look to the needs of our own communities and ensure spaces are made for the marginalised voices within it, so that we can create futures that support us all.
