--- a/community-gardening-tools.html
+++ b/community-gardening-tools.html
@@ -5,26 +5,69 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <link rel="stylesheet" media="screen and (min-width: 1024px)" href="desktop_styles.css">
-  <link rel="stylesheet" media="screen and (max-width: 1023px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
+    <link rel="stylesheet" media="screen and (min-width: 1001px)" href="desktop_styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 1000px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
+   
+    <script media="screen and (max-width: 1220px)" defer src="mobile.js"></script>
+   
+
     <title>tend.to  |  Community Gardening Resources</title>
 </head>
 
 <body style="background-color:#FFEAF9">
 
 <body>
- 
+  <div class="page-header" style="background-color: #FFEAF9">
+    <div class="page-header-section" style="background-color: #FFEAF9">
+      COMMUNITY GARDENING TOOLS</div>
+    <div class="page-header-title"><sub>GRANTS, MENTORSHIPS AND OTHER GARDENS OF KNOWLEDGE</sub></div>
+    <div class="header-line"></div>
+  </div>
   <div class="wrapper">
-  
-<h1>COMMUNITY GARDENING RESOURCES</h1>
-
-<sub>GRANTS, MENTORSHIPS AND OTHER GARDENS OF KNOWLEDGE</sub>
+    <div class="initiatives">
+      <h1>COMMUNITY GARDENING TOOLS</h1>
+      <sub>GRANTS, MENTORSHIPS AND OTHER GARDENS OF KNOWLEDGE</sub>
+      </div>
 
 <div class="description">Flowers cannot possibly grow alone. There are many tools around to help
     facilitate your growth. Dive into the tool shed and see what you can find.
 </div>
 
-<a href="index.html"><div class="nav-landing"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
+<div class="accordion-box">
+<button class="accordion"><p>GRANTS</p></button>
+<div class="panel">
+  <div class="panel-text">
+  <h2>Arts Projects for Individuals and Groups - Australia Council for the Arts</h2>
+  <p>
+    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+
+    https://www.nevernotcreative.org/herenow
+    https://nationaltheatreofparramatta.com.au/engage/creativefuturesprogram/
+    
+    https://www.nsw.gov.au/grants-and-funding/creative-koori-projects-individuals-and-organisations-2023/24</p>
+  </div>
+  </div>
+
+<button class="accordion"><p>MENTORSHIP</p></button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+<button class="accordion"><p>SUPPORT</p></button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+<button class="accordion"><p>OTHER GARDENS OF KNOWLEDGE</p></button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+</div>
+
+
 
 
 
@@ -36,6 +79,7 @@
 
 
 
+    <a href="index.html"><div class="nav-landing" style="background-color: #FFEAF9;"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
 
 
 
