--- a/planting-seeds-across-the-west.html
+++ b/planting-seeds-across-the-west.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script media="screen and (max-width: 999px)" defer src="mobile.js"></script>
+  <script media="screen and (min-width: 1500px)" defer src="filter.js"></script>
   <script media="screen and (min-width: 1100px)" defer src="red-blob.js"></script>
   <link rel="stylesheet" media="screen and (max-width: 940px)" href="mobile_styles.css">
 <link rel="stylesheet" media="screen and (min-width: 941px)" href="desktop_styles.css">
@@ -43,6 +43,16 @@
   h1{ 
     font-size: 25px;
   }
+
+  .filterDiv h2{
+    font-size: 20px;
+    line-height: 1.5rem;
+  }
+
+  .filterDiv p{
+    font-size: 13px;
+    line-height: 1.1rem;
+  }
   }
   
 
@@ -57,6 +67,7 @@
 <div class="page-header-title"><sub>INITIATIVE LIST</div>
   <div class="header-line"></div>
 </div>
+
 
   <div class="wrapper">
 
@@ -896,7 +907,7 @@ The WSAA represents over 40 arts and cultural organisations and local councils i
 </div>
 
 
-<a href="index.html"><div class="nav-landing" style="background-color: #D1EFFF;"><h1>RE-TEND.TO YOUR GARDEN</h1></div></a>
+<a href="index.html"><div class="nav-landing" style="background-color: #D1EFFF;"><h1> RE-TEND.TO YOUR GARDEN </h1></div></a>
 
 </body>
 </html>
