--- a/index.html
+++ b/index.html
@@ -97,37 +97,51 @@
 <!--title/section overlay-->
 <div id="blob-container">
 </div>
+
    <div class="grid">
+
+    <div class="icon-1">
 <div class="title-1"><a href="planting-seeds-across-the-west.html"><img id="seed" src="img/Asset 4@72x.png" width="100" height="100"><sub>Planting Seeds Across The West</sub></a>
 </div>
 <div class="desc-1">
   A non-exhaustive list of Western Sydney & Blue Mountains initiatives.
 </div>
+</div>
 
+<div class="icon-2">
 <div class="title-2"><a href="exploring-our-local-blooms.html"><img id="sunflower" src="img/sunflower-helianthus-annuus-blue-sky-background.png" width="100" height="100">
   <sub>Exploring Our<br>Local Blooms</sub></a></div>
   <div class="desc-2">
     Personal reflections on exploring places and events.  
   </div>
+</div>
 
+
+<div class="icon-3">
 <div class="title-3"><a href="conversations-from-the-garden.html"><img id="conversations" src="img/conversations.png" width="100" height="100"><sub>Conversations From<br>The Garden</sub></a></div>
 <div class="desc-3">
   Interviews with Western Sydney & Blue Mountains creatives.
 </div>
+</div>
 
-<div class="title-4"> <a href="community-gardening-tools.html"><img id="gloves" src="img/gloves.png" width="100" height="100">
+
+<div class="icon-4">
+  <div class="title-4"> <a href="community-gardening-tools.html"><img id="gloves" src="img/gloves.png" width="100" height="100">
   <sub>Community Gardening Tools</sub></a></div>
   <div class="desc-4">
     Grants and Mentorships, Support and Other Digital Gardens
   </div>
+</div>
 
+<div class="icon-5">
 <div class="title-5"><a href="water-your-knowledge.html"><img id="watering-can" src="img/watering can.png" width="100" height="100"></img>
   <sub>Water Your Knowledge</sub></a></div>
   <div class="desc-5">
     Books and publications to grow your knowledge.
   </div>
+</div>
 
-  <a href="about.html"><div class="about-mobile"><p>ABOUT THE GARDEN</p></div></a>
+  <a href="about.html"><div class="about-mobile"> <a href="about.html"><p>ABOUT THE GARDEN</p></a></div></a>
 </div>
 </div> <!--end of wrapper-->
 
